[package]
name = "ensemblrs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features= ["json"]}
tokio = { version = "1.39.2", features= ["full"] }
serde = {version = "1.0.206", features= ["derive"] }
anyhow = "1.0.86"
serde_json = "1.0.125"
polars = { version = "0.43.1", features = ["lazy","json"] }
